--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Views/Home/Index.cshtml
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Views/Home/Index.cshtml
@@ -36,6 +36,14 @@
             @Html.Partial("~/Views/Home/_HelpTab.cshtml")
         </div>
     </div>
+    <div class="col-lg-12 marginBetweenView">
+        <hr />
+    </div>
+    <div class="col-lg-12">
+        <div class="col-lg-8">
+            @Html.Partial("~/Views/Home/_Subjects.cshtml")
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript">
@@ -97,6 +105,21 @@
             },
             error: function (error) {
                 saveFailureIconAndText("helpTabTextStorageStatusIcon", "helpTabTextStorageStatusMessage", "Unable to display help tab text due to HTTP: " + error.status + ", " + error.statusText);
+            }
+        });
+
+        //Display subjects text if its saved if yes then perform edit UI changes
+        $.ajax({
+            type: "GET",
+            url: '@Url.Action("GetSavedSubjectsAsync")',
+            success: function (result) {
+                if (result != "") {                //Display the default UI when no help tab text results are available for display
+                    $(".subjectsIdTextBox").val(result);
+                    toggleToEdit("subjects");
+                }
+            },
+            error: function (error) {
+                saveFailureIconAndText("subjectsStorageStatusIcon", "subjectsStorageStatusMessage", "Unable to display subjects due to HTTP: " + error.status + ", " + error.statusText);
             }
         });
     });
