The expired timeline should be removed from the help page. My tab is activated for all the users.

--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Views/Help/Index.cshtml
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Views/Help/Index.cshtml
@@ -43,12 +43,6 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#timeline" data-toggle="tab" aria-expanded="true" class="nav-link rounded-0">
-                                Timeline
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
                             <a href="#feature" data-toggle="tab" aria-expanded="false" class="nav-link rounded-0">
                                 Feature
                             </a>
@@ -205,15 +199,6 @@
                         </div>
                         <!-- end FAQ content-->
 
-                        <div class="tab-pane show " id="timeline">
-
-                            <div class="text-center">
-                                <img src="~/Content/Help-Page_Timeline_V1.png" height="350" alt="File not found Image">
-
-                            </div> <!-- end /.text-center-->
-                        </div>
-                        <!-- end timeline content-->
-
                         <div class="tab-pane " id="feature">
 
                             <div class="timeline-alt pb-0">
@@ -257,6 +242,18 @@
                                         <h5 class="mt-0 mb-1">Help Page/User Guide<span class="ml-2 font-12">[Nov.2020]</span></h5>
                                         <p class="text-muted mt-2 mb-0 pb-3">
                                             Provide the list for more frequently asked questions if you have no idea how to start a conversation with Dolphin.
+                                        </p>
+
+                                    </div>
+                                </div>
+
+                                <div class="timeline-item">
+                                    <i class="mdi mdi-circle bg-info-lighten text-primary timeline-icon"></i>
+
+                                    <div class="timeline-item-info">
+                                        <h5 class="mt-0 mb-1">"My" tab<span class="ml-2 font-12">[Jan.2021]</span></h5>
+                                        <p class="text-muted mt-2 mb-0 pb-3">
+                                            This is the ticket overview page for all the users. It can help us quickly find the history tickets and high frequency Q&A key words..
                                         </p>
 
                                     </div>
