--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Views/Content/Index.cshtml
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Views/Content/Index.cshtml
@@ -51,11 +51,11 @@
                                 <tr v-for="ticket in unResolvedTickets">
                                     <td>
                                         {{ticket.Title|string_short(titleMaxLength)}}
-                                        <a v-if="ticket.Title.length > titleMaxLength" href="javascript:void(0);" class="action-icon" data-toggle="tooltip" v-bind:title="ticket.Title"><span class="text-primary"> <i class="mdi mdi-eye"></i></span></a>
+                                        <a v-if="ticket.Title && ticket.Title.length > titleMaxLength" href="javascript:void(0);" class="action-icon" data-toggle="tooltip" v-bind:title="ticket.Title"><span class="text-primary"> <i class="mdi mdi-eye"></i></span></a>
                                     </td>
                                     <td>
                                         {{ticket.Description|string_short(descriptionMaxLength)}}
-                                        <a v-if="ticket.Description.length > descriptionMaxLength" href="javascript:void(0);" class="action-icon" data-toggle="tooltip" v-bind:title="ticket.Description"><span class="text-primary"> <i class="mdi mdi-eye"></i></span></a>
+                                        <a v-if="ticket.Description && ticket.Description.length > descriptionMaxLength" href="javascript:void(0);" class="action-icon" data-toggle="tooltip" v-bind:title="ticket.Description"><span class="text-primary"> <i class="mdi mdi-eye"></i></span></a>
                                     </td>
                                     <td>{{ticket.RequesterName}} <a href="javascript:void(0);" class="action-icon" data-toggle="tooltip" title="chat with user" v-on:click="opendeeplink(ticket.RequesterUserPrincipalName)"> <span class="text-primary"><i class="dripicons-message"></i></span></a></td>
                                     <td>{{ticket.DateCreated|time_local}}</td>
@@ -106,11 +106,11 @@
                                 <tr v-for="ticket in resolvedTickets">
                                     <td>
                                         {{ticket.Title|string_short(titleMaxLength)}}
-                                        <a v-if="ticket.Title.length > titleMaxLength" href="javascript:void(0);" class="action-icon" data-toggle="tooltip" v-bind:title="ticket.Title"><span class="text-primary"> <i class="mdi mdi-eye"></i></span></a>
+                                        <a v-if="ticket.Title && ticket.Title.length > titleMaxLength" href="javascript:void(0);" class="action-icon" data-toggle="tooltip" v-bind:title="ticket.Title"><span class="text-primary"> <i class="mdi mdi-eye"></i></span></a>
                                     </td>
                                     <td>
                                         {{ticket.Description|string_short(descriptionMaxLength)}}
-                                        <a v-if="ticket.Description.length > descriptionMaxLength" href="javascript:void(0);" class="action-icon" data-toggle="tooltip" v-bind:title="ticket.Description"><span class="text-primary"> <i class="mdi mdi-eye"></i></span></a>
+                                         <a v-if="ticket.Description && ticket.Description.length > descriptionMaxLength" href="javascript:void(0);" class="action-icon" data-toggle="tooltip" v-bind:title="ticket.Description"><span class="text-primary"> <i class="mdi mdi-eye"></i></span></a>
                                     </td>
                                     <td>{{ticket.RequesterName}} </td>
                                     <td>{{ticket.AssignedToName}}</td>
@@ -145,15 +145,18 @@
             titleMaxLength: 10,
             descriptionMaxLength: 15,
         },
-        beforeCreate() {
+        beforeCreate()
+        {
             this.$options.filters.lastTimeResolved = this.$options.filters.lastTimeResolved.bind(this);
             this.$options.filters.lastTimeUnResolved = this.$options.filters.lastTimeUnResolved.bind(this)
         },
         methods: {
-            updateUnresolvedData: function (data) {
+            updateUnresolvedData: function (data)
+            {
                 this.isUnResolvedLoading = false
                 this.unResolvedTickets = data;
-                this.sleep(200).then(() => {
+                this.sleep(200).then(() =>
+                {
                     $("#tickets-unresolved-datatable").DataTable({
                         language: {
                             paginate: {
@@ -193,16 +196,19 @@
                             style: "multi"
                         },
                         order: [[1, "asc"]],
-                        drawCallback: function () {
+                        drawCallback: function ()
+                        {
                             $(".dataTables_paginate > .pagination").addClass("pagination-rounded")
                         }
                     })
                 });
             },
-            updateResolvedData: function (data) {
+            updateResolvedData: function (data)
+            {
                 this.isResolvedLoading = false
                 this.resolvedTickets = data;
-                this.sleep(200).then(() => {
+                this.sleep(200).then(() =>
+                {
                     $("#tickets-resolved-datatable").DataTable({
                         language: {
                             paginate: {
@@ -239,25 +245,31 @@
                             style: "multi"
                         },
                         order: [[1, "asc"]],
-                        drawCallback: function () {
+                        drawCallback: function ()
+                        {
                             $(".dataTables_paginate > .pagination").addClass("pagination-rounded")
                         }
                     })
                 });
             },
-            opendeeplink: function (link) {
+            opendeeplink: function (link)
+            {
                 microsoftTeams.executeDeepLink(link);
             },
-            deepLinkToTicket: function (messageId) {
+            deepLinkToTicket: function (messageId)
+            {
                 var link = "https://teams.microsoft.com/l/message/" + this.teamId + "/" + messageId + "?tenantId=" + this.tenantId + "&groupId=" + this.groupId + "&parentMessageId=" + messageId + "&teamName=" + encodeURIComponent(this.teamName) + "&channelName=" + encodeURIComponent(this.channelName);
                 this.opendeeplink(link);
             },
-            sleep: function (time) {
+            sleep: function (time)
+            {
                 return new Promise((resolve) => setTimeout(resolve, time));
             }
         },
-        mounted() {
-            microsoftTeams.getContext((context) => {
+        mounted()
+        {
+            microsoftTeams.getContext((context) =>
+            {
                 this.teamId = context.teamId;
                 this.tenantId = context.tid;
                 this.groupId = context.groupId;
@@ -266,23 +278,28 @@
             });
             axios
                 .post('/content/tickets', { isResolved: false })
-                .then((response) => {
+                .then((response) =>
+                {
                     this.updateUnresolvedData(response.data);
                 })
-                .catch(function (error) { // 请求失败处理
+                .catch(function (error)
+                { // 请求失败处理
                     console.log(error);
                 });
             axios
                 .post('/content/tickets', { isResolved: true })
-                .then((response) => {
+                .then((response) =>
+                {
                     this.updateResolvedData(response.data);
                 })
-                .catch(function (error) { // 请求失败处理
+                .catch(function (error)
+                { // 请求失败处理
                     console.log(error);
                 });
         },
         filters: {
-            status: function (value) {
+            status: function (value)
+            {
                 if (value == 0)
                     return "unassigned"
                 if (value == 1)
@@ -294,16 +311,24 @@
                 if (value == 4)
                     return "SOS"
             },
-            string_short: function (value, maxlength) {
+            string_short: function (value, maxlength)
+            {
+                if (value == null)
+                {
+                    return "";
+                }
+
                 if (value.length > maxlength)
                     return value.substring(0, maxlength) + "……"
                 else return value
             },
-            time_local: function (value) {
+            time_local: function (value)
+            {
                 var localDate = new Date(value);
                 return formatDate(localDate, "yyyy-MM-d H:mm");
             },
-            timeJet: function (dateBegin, dateEnd) {
+            timeJet: function (dateBegin, dateEnd)
+            {
 
                 var dateDiff = dateEnd.getTime() - dateBegin.getTime();//时间差的毫秒数
                 var dayDiff = Math.floor(dateDiff / (24 * 3600 * 1000));//计算出相差天数
@@ -323,25 +348,29 @@
 
                 return result;
             },
-            lastTimeResolved: function (value, endtime) {
+            lastTimeResolved: function (value, endtime)
+            {
                 var dateBegin = new Date(value);
                 var dateEnd = new Date(endtime);
                 return this.$options.filters.timeJet(dateBegin, dateEnd)
             },
-            lastTimeUnResolved: function (value) {
+            lastTimeUnResolved: function (value)
+            {
                 var dateBegin = new Date(value);
                 var dateEnd = new Date();
                 return this.$options.filters.timeJet(dateBegin, dateEnd)
             }
         }
     })
-    function formatDate(date, format, utc) {
+    function formatDate(date, format, utc)
+    {
         var MMMM = ["\x00", "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
         var MMM = ["\x01", "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
         var dddd = ["\x02", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
         var ddd = ["\x03", "Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"];
 
-        function ii(i, len) {
+        function ii(i, len)
+        {
             var s = i + "";
             len = len || 2;
             while (s.length < len) s = "0" + s;
@@ -398,7 +427,8 @@
 
         var tz = -date.getTimezoneOffset();
         var K = utc || !tz ? "Z" : tz > 0 ? "+" : "-";
-        if (!utc) {
+        if (!utc)
+        {
             tz = Math.abs(tz);
             var tzHrs = Math.floor(tz / 60);
             var tzMin = tz % 60;
